--- a/EliminationEngine/EliminationEngine.csproj
+++ b/EliminationEngine/EliminationEngine.csproj
@@ -13,9 +13,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="CjClutter.ObjLoader" Version="1.0.0" />
     <PackageReference Include="FbxSharp" Version="0.9.0" />
     <PackageReference Include="OpenTK" Version="4.6.7" />
+    <PackageReference Include="SharpGLTF.Core" Version="1.0.0-alpha0023" />
     <PackageReference Include="VulkanSharp" Version="0.1.10" />
   </ItemGroup>
 
