--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "SharpFont"]
 	path = SharpFont
 	url = https://github.com/space-wizards/SharpFont.git
+[submodule "Avalonia"]
+	path = Avalonia
+	url = https://github.com/AvaloniaUI/Avalonia.git
