--- a/EliminationEngine/EliminationEngine.csproj
+++ b/EliminationEngine/EliminationEngine.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="BepuPhysics" Version="2.4.0-beta9" />
     <PackageReference Include="ManagedBass" Version="3.1.0" />
     <PackageReference Include="OpenTK" Version="4.6.7" />
     <PackageReference Include="SharpGLTF.Core" Version="1.0.0-alpha0023" />
