--- a/AttackGame/Properties/launchSettings.json
+++ b/AttackGame/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "AttackGame": {
-      "commandName": "Executable",
-      "executablePath": "C:\\Users\\komunre\\Desktop\\codes\\EliminationEngine\\AttackGame\\bin\\Debug\\net6.0\\AttackGame.exe"
+      "commandName": "Project"
     }
   }
 }
