--- a/EliminationEngine/EliminationEngine.csproj
+++ b/EliminationEngine/EliminationEngine.csproj
@@ -14,7 +14,9 @@
 
   <ItemGroup>
     <PackageReference Include="BepuPhysics" Version="2.4.0-beta9" />
+    <PackageReference Include="Lidgren.Network" Version="1.0.2" />
     <PackageReference Include="ManagedBass" Version="3.1.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2-beta1" />
     <PackageReference Include="OpenTK" Version="4.7.1" />
     <PackageReference Include="SharpGLTF.Core" Version="1.0.0-alpha0023" />
     <PackageReference Include="SixLabors.ImageSharp" Version="1.0.4" />
