Parallax occlusion fix and editor beginnings

--- a/EliminationEngine/EliminationEngine.csproj
+++ b/EliminationEngine/EliminationEngine.csproj
@@ -115,6 +115,9 @@
     <None Update="res\normaldef.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="res\Plane.glb">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Shaders\camera.frag">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
