POWER OF PHYSICSgit status!

--- a/EliminationEngine/EliminationEngine.csproj
+++ b/EliminationEngine/EliminationEngine.csproj
@@ -105,7 +105,7 @@
     <None Update="libgcc_s_seh-1.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="res\CubePlaceholder.glb">
+    <None Update="res\cube-placeholder.glb">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="res\displacedef.png">
