--- a/EliminationEngine/EliminationEngine.csproj
+++ b/EliminationEngine/EliminationEngine.csproj
@@ -138,6 +138,9 @@
     <None Update="res\Plane.glb">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="res\RedOctober.ttf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="res\satellite-placeholder.glb">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
