--- a/EliminationEngine/EliminationEngine.csproj
+++ b/EliminationEngine/EliminationEngine.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
@@ -173,5 +173,9 @@
   <ItemGroup>
     <Folder Include="res\presets\" />
   </ItemGroup>
+
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="XCOPY &quot;$(ProjectDir)res&quot; &quot;$(TargetDir)\res&quot; /E /Y" />
+  </Target>
 
 </Project>
